Fixes spacing of text and image component

--- a/src/components/TextAndImage.module.scss
+++ b/src/components/TextAndImage.module.scss
@@ -3,7 +3,7 @@
     
     .textAndImage {
         margin: 0 auto;
-        margin-bottom: 80px;
+        margin-bottom: 48px;
         padding: 0 3%;
         max-width: 896px;
         display: flex;
